feat(accessibility): improve accessibility and html semantic

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Simple TicTacToe game. You can play with your friend or with computer at 2 differents game variations." />
+
     <title>TicTacToe</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
